--- a/src/assets/styles/Expertise.scss
+++ b/src/assets/styles/Expertise.scss
@@ -11,7 +11,8 @@
   
 .skills-container .skills-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto;
     grid-gap: 50px;
 }
   
